--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -16,6 +16,8 @@ runtimes:
     - python@3.10.8
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
+  disabled:
+    - hadolint
   enabled:
     - checkov@3.2.19
     - git-diff-check
@@ -27,8 +29,6 @@ lint:
     - tflint@0.50.3
     - trivy@0.49.1
     - trufflehog@3.67.5
-    - hadolint@2.12.1-beta
-
 actions:
   disabled:
     - trunk-announce
