--- a/.trunk/trunk.yaml
+++ b/.trunk/trunk.yaml
@@ -2,33 +2,35 @@
 # To learn more about the format of this file, see https://docs.trunk.io/reference/trunk-yaml
 version: 0.1
 cli:
-  version: 1.19.0
+  version: 1.22.10
 # Trunk provides extensibility via plugins. (https://docs.trunk.io/plugins)
 plugins:
   sources:
     - id: trunk
-      ref: v1.4.2
+      ref: v1.6.7
       uri: https://github.com/trunk-io/plugins
 # Many linters and tools depend on runtimes - configure them here. (https://docs.trunk.io/runtimes)
 runtimes:
   enabled:
-    - node@18.12.1
+    - node@18.20.5
     - python@3.10.8
 # This is the section where you manage your linters. (https://docs.trunk.io/check/configuration)
 lint:
   disabled:
     - hadolint
   enabled:
-    - checkov@3.2.19
+    - actionlint@1.7.7
+    - yamllint@1.35.1
+    - checkov@3.2.372
     - git-diff-check
-    - markdownlint@0.39.0
-    - prettier@3.2.5
-    - terrascan@1.18.11
+    - markdownlint@0.44.0
+    - prettier@3.5.1
+    - terrascan@1.19.1
     - terraform@1.7.4:
         commands: [validate, fmt]
-    - tflint@0.50.3
-    - trivy@0.49.1
-    - trufflehog@3.67.5
+    - tflint@0.55.1
+    - trivy@0.59.1
+    - trufflehog@3.88.10
 actions:
   disabled:
     - trunk-announce
